fix js logic + style

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <button id="start-game_button" onclick="startGame()">START</button>
         </div>
         <div class="d-flex flex-wrap" id="main-game_box">
+            <div id="score-box">
+                <h3>SCORE:</h3>
+                <div id="score"></div>
+            </div>
         </div>
     </div>
     <script src="js/main.js"></script>
