--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <div class="d-flex flex-wrap" id="main-game_box">
             <div id="score-box">
                 <h3>SCORE:</h3>
-                <div id="score"></div>
+                <div id="score">333434</div>
+                <button id="reset">RESET</button>
             </div>
         </div>
     </div>
